--- a/apps/equi/src/app/App.css
+++ b/apps/equi/src/app/App.css
@@ -4,4 +4,9 @@
   justify-content: center;
   width: calc(100vw);
   height: calc(100vh);
+  background-color: black;
+  -webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */
 }
